# taneleer

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: config.yaml  tcli.rs
examples/tcli/: main.rs  parse.rs  util.rs
examples/tcli/commands/: artifact.rs  class.rs  item.rs  mod.rs  source.rs  tag.rs  usage.rs
examples/tcli/connection/: mod.rs  wsjsonrpc.rs
src/: api.rs  artifact.rs  backend_pack.rs  class.rs  lib.rs  main.rs  manager.rs  manifest.rs  source.rs  tag.rs  usage.rs  util.rs
src/backends/: fs.rs  mod.rs
src/backends/docker_registry/: mod.rs
src/backends/docker_registry/storage/: mod.rs  sqlite.rs
src/config/: backend.rs  frontend.rs  mod.rs  proxy.rs  rpc.rs  storage.rs
src/frontends/: dbus.rs  docker.rs  mod.rs  wsjsonrpc.rs
src/frontends/wsjsonrpc/: jsonrpc.rs  mod.rs
src/proxies/: mod.rs  rewrite.rs
src/rpc/: mod.rs
src/rpc/wsjsonrpc/: api.rs  handlers.rs  methods.rs  mod.rs
src/storage/: mod.rs  sqlite.rs
