[package]
name = "taneleer"
authors = ["Stanislav Shmarov <github@snarpix.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/Snarpix/taneleer"
description = "Build artifacts storage service"

[dependencies]
dbus = "0.9.6"
dbus-crossroads = "0.5.1"
dbus-tokio = "0.7.5"
futures = "0.3.24"
async-trait = "0.1.57"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-util = { version = "0.7.4", features = ["io"] }
tokio-tungstenite = "0.17.2"
sqlx = { version = "0.6.1", features = ["sqlite", "runtime-tokio-native-tls", "uuid"] }
serde = "1.0.144"
serde_with = { version = "2.0.1", features = ["hex"] }
serde_derive = "1.0.144"
serde_yaml = "0.9.11"
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
hex = "0.4.3"
url = "2.3.1"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.9.0"
sha2 = "0.10.5"
bytes = "1.2.1"
axum = { version = "0.6.0-rc.1", features = ["headers"] }
regex = "1.6.0"
lazy_static = "1.4.0"
libc = "0.2.132"
clap = { version = "3.2.20", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tower = "0.4.13"

[dev-dependencies]
comfy-table = "6.1.0"
